Open and save a bmp image
Create blank files for substitute and shift cipher, switch to ArashPartow/bitmap bmp library.

--- a/Steganography/Steganography.vcxproj.filters
+++ b/Steganography/Steganography.vcxproj.filters
@@ -18,5 +18,22 @@
     <ClCompile Include="Steganography.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="cbmp.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Substitute.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Shift.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="cbmp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="bitmap_image.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
