--- a/Steganography/Steganography.vcxproj
+++ b/Steganography/Steganography.vcxproj
@@ -139,7 +139,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cbmp.c" />
+    <ClCompile Include="Shift.cpp" />
     <ClCompile Include="Steganography.cpp" />
+    <ClCompile Include="Substitute.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="bitmap_image.hpp" />
+    <ClInclude Include="cbmp.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
