--- a/Steganography/Steganography.vcxproj
+++ b/Steganography/Steganography.vcxproj
@@ -145,6 +145,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bitmap_image.hpp" />
+    <ClInclude Include="shift.hpp" />
+    <ClInclude Include="substitution.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
